<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dip">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dip"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/enter_or_gen_password"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dip"
        android:text="@string/description"
        android:maxLines="1"

        />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:maxLines="1"
        android:hint="@string/enter_description"/>

    <Button
        android:id="@+id/btNewPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/generate_password">

    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/password_options"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginEnd="10dp"
            android:text="@string/password_length"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etLength"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:inputType="numberDecimal"
            android:text="@string/_twelwe"
            android:gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="10dp">

        <CheckBox
            android:id="@+id/cbLowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lowercase_letters"
            android:checked="true"/>

        <CheckBox
            android:id="@+id/cbUppers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uppercase_letters"
            android:checked="true"/>

        <CheckBox
            android:id="@+id/cbNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numbers"
            android:checked="true"/>
        <CheckBox
            android:id="@+id/cbSpecials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/special_characters"
            android:checked="true"/>

    </LinearLayout>

</LinearLayout>
</ScrollView>