<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/myColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/etGeneratedPassword"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="Generated Password"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/btnCopyToClipboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/myColor"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:src="@drawable/ic_copy"/>
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password Settings"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <SeekBar
        android:id="@+id/seekBarLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:max="48"
        android:min="6"
        android:progress="8"
        android:thumbTint="@color/colorAccent"
        android:progressTint="@color/colorAccent"
        android:layout_gravity="center_horizontal"
        android:theme="@style/Widget.AppCompat.SeekBar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_length_8"
        android:id="@+id/tvPasswordLength"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <CheckBox
        android:id="@+id/chkUppercase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/include_uppercase_letters"
        android:checked="true"
        android:layout_marginBottom="8dp"/>

    <CheckBox
        android:id="@+id/chkLowercase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/include_lowercase_letters"
        android:checked="true"
        android:layout_marginBottom="8dp"/>

    <CheckBox
        android:id="@+id/chkNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/include_numbers"
        android:checked="true"
        android:layout_marginBottom="8dp"/>

    <CheckBox
        android:id="@+id/chkSpecialChars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/include_special_characters"
        android:checked="true"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnGeneratePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_password"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
